--- a/app/src/main/res/layout/station_detail.xml
+++ b/app/src/main/res/layout/station_detail.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -20,9 +20,9 @@
                 android:id="@+id/linearLayout"
                 android:layout_width="0dp"
                 android:layout_height="200dp"
-                android:orientation="vertical"
-                android:weightSum="2.8"
                 android:background="@color/colorWhite"
+                android:orientation="vertical"
+                android:weightSum="3"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -30,7 +30,7 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="1">
+                    android:layout_weight="1.3">
 
                     <TextView
                         android:id="@+id/textStationName"
@@ -51,7 +51,7 @@
                         android:layout_toLeftOf="@+id/textStationName"
                         android:layout_toStartOf="@+id/textStationName"
                         android:gravity="left|center_vertical"
-                        android:paddingLeft="10dp"/>
+                        android:paddingLeft="10dp" />
 
                     <TextView
                         android:id="@+id/textStationNext"
@@ -62,13 +62,13 @@
                         android:layout_centerVertical="true"
                         android:layout_toRightOf="@+id/textStationName"
                         android:gravity="right|center_vertical"
-                        android:paddingRight="10dp"/>
+                        android:paddingRight="10dp" />
                 </RelativeLayout>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="0.8">
+                    android:layout_weight="0.9">
 
                     <TextView
                         android:id="@+id/textLeftFirstTrain"
@@ -77,8 +77,10 @@
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
-                        android:layout_margin="5dp"
-                        android:text="동묘앞행" />
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_marginTop="5dp" />
 
                     <TextView
                         android:id="@+id/textLeftFirstWhere"
@@ -88,7 +90,6 @@
                         android:layout_margin="5dp"
                         android:layout_toEndOf="@+id/textLeftSecondTrain"
                         android:layout_toRightOf="@+id/textLeftSecondTrain"
-                        android:text="전역 도착"
                         android:textColor="@android:color/holo_red_dark" />
 
                     <TextView
@@ -98,8 +99,10 @@
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
                         android:layout_below="@+id/textLeftFirstTrain"
-                        android:layout_margin="5dp"
-                        android:text="청량리행" />
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_marginTop="5dp"/>
 
                     <TextView
                         android:id="@+id/textLeftSecondWhere"
@@ -109,7 +112,6 @@
                         android:layout_margin="5dp"
                         android:layout_toEndOf="@+id/textLeftSecondTrain"
                         android:layout_toRightOf="@+id/textLeftSecondTrain"
-                        android:text="4번째 전"
                         android:textColor="@android:color/holo_red_dark" />
 
                     <View
@@ -129,10 +131,12 @@
                         android:layout_height="wrap_content"
                         android:layout_alignBaseline="@+id/textLeftFirstWhere"
                         android:layout_alignBottom="@+id/textLeftFirstWhere"
-                        android:layout_margin="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_marginTop="5dp"
                         android:layout_toEndOf="@+id/view2"
-                        android:layout_toRightOf="@+id/view2"
-                        android:text="신창행" />
+                        android:layout_toRightOf="@+id/view2"/>
 
                     <TextView
                         android:id="@+id/textRightFirstWhere"
@@ -143,7 +147,6 @@
                         android:layout_margin="5dp"
                         android:layout_toEndOf="@+id/textRightSecondTrain"
                         android:layout_toRightOf="@+id/textRightSecondTrain"
-                        android:text="전역 도착"
                         android:textColor="@android:color/holo_red_dark" />
 
                     <TextView
@@ -153,9 +156,11 @@
                         android:layout_alignBaseline="@+id/textLeftSecondWhere"
                         android:layout_alignBottom="@+id/textLeftSecondWhere"
                         android:layout_below="@id/textRightFirstTrain"
-                        android:layout_margin="5dp"
-                        android:layout_toRightOf="@+id/view2"
-                        android:text="서동탄행" />
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_toRightOf="@+id/view2" />
 
                     <TextView
                         android:id="@+id/textRightSecondWhere"
@@ -166,19 +171,19 @@
                         android:layout_margin="5dp"
                         android:layout_toEndOf="@+id/textRightSecondTrain"
                         android:layout_toRightOf="@+id/textRightSecondTrain"
-                        android:text="3번째 전"
                         android:textColor="@android:color/holo_red_dark" />
                 </RelativeLayout>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="1">
+                    android:layout_weight="0.8">
 
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
+                        android:background="@drawable/btn_timetable"
                         android:text="열차 시간표" />
                 </RelativeLayout>
             </LinearLayout>
@@ -188,11 +193,11 @@
                 android:id="@+id/relativeLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/linearLayout"
                 android:layout_marginTop="10dp"
                 android:background="@color/colorWhite"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent">
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
                 <TextView
                     android:id="@+id/textMapTitle"
@@ -203,27 +208,28 @@
                     android:layout_alignParentTop="true"
                     android:layout_margin="10dp"
                     android:text="위치"
-                    android:textStyle="bold"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:textStyle="bold" />
 
                 <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:layout_below="@+id/textMapTitle"
+                    android:layout_height="120dp"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_marginBottom="10dp"/>
+                    android:layout_below="@+id/textMapTitle"
+                    android:layout_marginBottom="10dp" />
             </RelativeLayout>
 
             <!-- 주소 및 전화번호 출력하는 Layout -->
             <RelativeLayout
                 android:layout_width="0dp"
-                android:layout_height="120dp"
-                android:layout_marginTop="10dp"
+                android:layout_height="115dp"
+                android:layout_marginTop="12dp"
                 android:background="@color/colorWhite"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/relativeLayout">
+                app:layout_constraintTop_toBottomOf="@+id/relativeLayout">
 
                 <TextView
                     android:id="@+id/textAddressTitle"
@@ -233,9 +239,9 @@
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_margin="10dp"
-                    android:textStyle="bold"
                     android:text="주소"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/textAddress"
@@ -255,7 +261,6 @@
                     android:layout_alignStart="@+id/textAddress"
                     android:layout_below="@+id/textAddress"
                     android:text="032-361-4870" />
-
             </RelativeLayout>
 
         </android.support.constraint.ConstraintLayout>
